# linera-gol-challenge

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  publish-puzzles.sh
.github/: pull_request_template.md
.github/workflows/: main.yml
backend/: Cargo.toml  README.md
backend/src/: contract.rs  game.rs  lib.rs  service.rs  state.rs
frontend/: .prettierignore  .prettierrc  README.md  index.html  jest.config.js  package.json  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
frontend/public/js/: dynamic-iframe-shim.js
frontend/src/: App.tsx  providers.tsx
frontend/src/components/common/: DifficultyBadge.tsx  LoadingScreen.tsx
frontend/src/components/game-of-life/: GameBoard.tsx  GameBoardCanvas.tsx  GameBoardWrapper.tsx  RectangleOverlays.tsx
frontend/src/components/puzzles/: GameControls.tsx  GameHeader.tsx  GamePlayingSkeleton.tsx  GamePlayingView.tsx  HowToPlayTutorial.tsx  PuzzleCard.tsx  PuzzleGame.tsx  PuzzleHeader.tsx  PuzzleInfo.tsx  PuzzleList.tsx  PuzzleSelectionView.tsx  PuzzleSubmit.tsx  PuzzleTutorial.tsx  index.ts
frontend/src/components/wallet/: WalletConnect.tsx
frontend/src/config/: fonts.ts  site.ts
frontend/src/lib/game-of-life/: test-helpers.ts
frontend/src/lib/game-of-life/application/: GameEngine.ts
frontend/src/lib/game-of-life/config/: board-config.ts  colors.ts  difficulty-config.ts
frontend/src/lib/game-of-life/data/: puzzles.ts
frontend/src/lib/linera/: constants.ts
frontend/src/lib/providers/: QueryProvider.tsx
frontend/src/lib/types/: puzzle.types.ts
frontend/src/styles/: globals.css
(+19 files in other folders)
